Re: #1310 - stop line breaks on remove buttons

--- a/portal2/src/main/webapp/themes/default/css/header.css
+++ b/portal2/src/main/webapp/themes/default/css/header.css
@@ -108,6 +108,10 @@
 	top:      0.15em;
 }
 
+#query-translations .query-translation{
+	display: inline-block;
+}
+
 @media only screen and ( min-width:48em ){
 
 	.phone-test{
